--- a/AlpsT4USB/Info.plist
+++ b/AlpsT4USB/Info.plist
@@ -33,25 +33,16 @@
 					<integer>65281</integer>
 				</dict>
 			</array>
-			<key>IOPropertyMatch</key>
-			<dict>
-				<key>ProductID</key>
-				<integer>4630</integer>
-			</dict>
-			<key>IOProbeScore</key>
-			<integer>300</integer>
 			<key>IOClass</key>
 			<string>AlpsT4USBEventDriver</string>
 			<key>IOProviderClass</key>
 			<string>IOHIDInterface</string>
+			<key>IOProbeScore</key>
+			<integer>9999</integer>
 			<key>RM,deliverNotifications</key>
 			<true/>
 			<key>QuietTimeAfterTyping</key>
 			<integer>500</integer>
-			<key>VendorID</key>
-			<integer>1102</integer>
-			<key>ProductID</key>
-			<integer>4630</integer>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
@@ -69,5 +60,7 @@
 		<key>com.apple.kpi.mach</key>
 		<string>13.0</string>
 	</dict>
+	<key>OSBundleRequired</key>
+	<string>Safe Boot</string>
 </dict>
 </plist>
