--- a/AlpsT4USB/Info.plist
+++ b/AlpsT4USB/Info.plist
@@ -47,6 +47,12 @@
 	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 blankmac. All rights reserved.</string>
+	<key>bcdDevice</key>
+	<integer>1552</integer>
+	<key>idVendor</key>
+	<integer>1102</integer>
+	<key>idProduct</key>
+	<integer>4630</integer>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.alexandred.VoodooI2C</key>
